--- a/index.html
+++ b/index.html
@@ -36,5 +36,8 @@
             <p>Firm   and    well-fixed    foundation.</p>
         </div> 
     </div>
+    <div class="fact">
+        <p> Herrick studied at the University of Cambridge in the United Kingdom.</p>
+    </div>
 </body>
 </html>
